--- a/CSS/ticket.css
+++ b/CSS/ticket.css
@@ -36,3 +36,24 @@
     margin: 0 auto;
 
 }
+
+#contact button[type="submit"] {
+    cursor:pointer;
+    width:100%;
+    border:none;
+    background:dodgerblue;
+    color:#FFF;
+    margin:0 0 5px;
+    padding:10px;
+    font-size:15px;
+    width: 250px;
+}
+
+#contact button[type="submit"]:hover {
+    background:dodgerblue;
+    -webkit-transition:background 0.3s ease-in-out;
+    -moz-transition:background 0.3s ease-in-out;
+    transition:background-color 0.3s ease-in-out;
+}
+
+#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
