--- a/CSS/reservation_check.css
+++ b/CSS/reservation_check.css
@@ -22,10 +22,10 @@ body {
 }
 
 .container {
-	max-width:400px;
-	width:100%;
-	margin:0 auto;
-	position:relative;
+	max-width: 400px;
+	width: 100%;
+	margin: 10rem auto;
+	position: relative;
 }
 
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
