--- a/CSS/ticket.css
+++ b/CSS/ticket.css
@@ -1,13 +1,7 @@
 .ticketing {
-    width: 1000px;
-    margin: 100px auto auto auto;
+    width: 100%;
+    margin: 130px auto auto auto;
     font-size: 25px;
-}
-.onlineTicket {
-    width: 500px;
-    margin: 200px auto auto auto;
-    text-align: center;
-    font-size: 17px;
 }
 
 .button{
@@ -28,7 +22,15 @@
     transition: .3s linear;
     text-align: center;
     left: 42%;
+}
 
+.reservationNum {
+    padding: 1.5rem 1.5rem 1.5rem;
+}
+
+.passengerName {
+    padding-left: 1.5rem;
+    padding-bottom: 1.5rem;
 }
 
 #wrapper{
